Delete all unnecessary files and folders

--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,10 @@
 # Additional information and code
 sample
 
+# Work that I posted on the Kaggle
+heart-disease-analysis
+
+# Reports for the university
+doc
+
 # Additional Ignore Patterns (if needed)
