Small changes to documentation

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ sample
 # Work that I posted on the Kaggle
 heart-disease-analysis
 
-# Reports for the university
+# Documentation and reports for the lab works
 doc
 
 # Additional Ignore Patterns (if needed)
